feat: restructure documentation layout and add theme toggle functionality

--- a/wraptalk-react/package.json
+++ b/wraptalk-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wraptalk/wraptalk-react",
+  "name": "wraptalk-react",
   "version": "0.0.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
