--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
-    "start": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "start": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "build" : "node"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
