--- a/wraptalk-react/package.json
+++ b/wraptalk-react/package.json
@@ -1,16 +1,9 @@
 {
-  "name": "wraptalk-reactjs",
-<<<<<<< HEAD
-  "version": "0.0.1",
-=======
-  "version": "1.0.1",
->>>>>>> 8665e3093916e72197b8d28495d8405be67af01e
+  "name": "wraptalk-react",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "publishConfig": {
-    "access": "public"
-  },
   "files": [
     "dist"
   ],
